--- a/catalog.html
+++ b/catalog.html
@@ -3,33 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт - Каталог - Перфораторы</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <div>
-        <a href="index.html"><img src="img/logo.svg" alt="Логотип компании" width="109" height="19"></a>
+    <header class="main-header">
+      <div class="header-top">
+        <a class="site-logo" href="index.html"><img src="img/logo.svg" alt="Логотип компании" width="109" height="19"></a>
         <form action="https://echo.htmlacademy.ru" method="post">
           <label class="visually-hidden" for="search">Поиск</label>
-          <input type="search" id="search" name="search" placeholder="Поиск:">
+          <input class="header-search" type="search" id="search" name="search" placeholder="Поиск:">
           <button type="submit">Искать</button>
         </form>
-        <a href="#">Закладки: 0</a>
-        <a href="#">Корзина: 10</a>
-        <a href="#">Оформить заказ</a>
+        <div class="shop-menu">
+          <a href="#">Закладки: 0</a>
+          <a class="cart-full" href="#">Корзина: 10</a>
+          <a class="button button-checkout" href="#">Оформить заказ</a>
+        </div>
       </div>
-      <div>
-        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p><a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a></p>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <ul>
-          <li><a href="#">Равшан Джамшутович</a></li>
+      <div class="header-bottom">
+        <p class="shop-info">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <p><a class="header-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a></p>
+        <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <ul class="user-menu">
+          <li><a class="button button-profile profile-login" href="#">Равшан Джамшутович</a></li>
           <li><a href="#"><span class="visually-hidden">Выход</span></a></li>
-          <li><a href="#">Мои заказы</a></li>
-          <li><a href="#">Личный кабинет</a></li>
+          <li><a class="link-profile" href="#">Мои заказы</a></li>
+          <li><a class="link-profile" href="#">Личный кабинет</a></li>
         </ul>
       </div>
-      <nav>
-        <ul>
+      <nav class="site-nav">
+        <ul class="main-nav">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Каталог</a></li>
@@ -41,17 +46,17 @@
       </nav>
     </header>
     <main>
-      <ul>
+      <ul class="breadcrumbs">
         <li><a href="index.html"><span class="visually-hidden">Домой</span></a></li>
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li><a href="#">Перфораторы</a></li>
       </ul>
-      <h1>Перфораторы</h1>
+      <h1 class="catalog-title">Перфораторы</h1>
       <!-- Ф И Л Ь Т Р -->
-      <section>
-        <h2>Фильтр</h2>
-        <form action="echo.htmlacademy.ru" method="get">
+      <section class="sidebar">
+        <h2 class="filter-title">Фильтр</h2>
+        <form class="filter" action="echo.htmlacademy.ru" method="get">
           <fieldset>
             <legend>Цена:</legend>
             <div class="range-controls">
@@ -104,12 +109,12 @@
               </li>
             </ul>
           </fieldset>
-          <button type="submit">Показать</button>
+          <button class="button form-button" type="submit">Показать</button>
         </form>
       </section>
       <section>
         <div>
-        <h2>Каталог перфораторов</h2>
+        <h2 class="visually-hidden">Каталог перфораторов</h2>
         <div>
           <span>Сортировка:</span>
           <ul>
@@ -123,94 +128,94 @@
           </ul>
         </div>
         <!-- К А Т А Л О Г -->
-        <article>
+        <article class="cat-item">
           <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 3000</h3>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="item-price">22500 Р.</p>
+          <p class="item-sale">15500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 6000</h3>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="item-price">30500 Р.</p>
+          <p class="item-sale">25500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 2000</h3>
-          <p>12500 Р.</p>
+          <p class="item-sale">12500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
           <div>New</div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 3000</h3>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="item-price">22500 Р.</p>
+          <p class="item-sale">15500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 6000</h3>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="item-price">22500 Р.</p>
+          <p class="item-sale">15500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
             <div>New</div>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 2000</h3>
-          <p>12500 Р.</p>
+          <p class="item-sale">12500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 3000</h3>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="item-price">22500 Р.</p>
+          <p class="item-sale">15500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
             <div>New</div>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 6000</h3>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="item-price">22500 Р.</p>
+          <p class="item-sale">15500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 2000</h3>
-          <p>12500 Р.</p>
+          <p class="item-sale">12500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
       </div>
@@ -224,7 +229,7 @@
         </ul>
       </div>
       <section>
-        <h2>Пара слов о перфораторах</h2>
+        <h2 class="title sub-title">Пара слов о перфораторах</h2>
         <p>Перфоратор — универсальный строительный инструмент.
           Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
           Существуют электромеханические и пневматические перфораторы.
@@ -233,47 +238,51 @@
           в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </section>
     </main>
-    <footer>
-      <a href="#"><img src="img/logo.svg" alt="Логотип компании" width="138" height="23"></a>
-      <p>
-        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-      </p>
-      <p>
-        <a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
-      </p>
-      <ul>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-      </ul>
-      <p>
-        © 2010–2019 Компания «Техномарт»
-        Все права защищены
-      </p>
-      <ul>
-        <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-        <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
-      </ul>
-      <p>
-        Обратная связь:
-        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      </p>
-      <p>
-        Разработано —
-        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-      </p>
+    <footer class="main-footer">
+      <div class="footer-top">
+        <a class="site-logo" href="#"><img src="img/logo.svg" alt="Логотип компании" width="138" height="23"></a>
+        <p class="footer-address">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        </p>
+        <p>
+          <a class="footer-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
+        </p>
+        <ul class="footer-nav">
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul class="footer-promo">
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>
+          © 2010–2019 Компания «Техномарт»
+          Все права защищены
+        </p>
+        <ul class="social-button">
+          <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+        </ul>
+        <p>
+          Обратная связь:
+          <a class="academy" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p>
+          Разработано —
+          <a class="academy" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        </p>
+      </div>
     </footer>
 
-    <section>
+    <section class="cart-add hide">
       <h2>Товар добавлен в корзину!</h2>
       <div>
         <a href="#">Оформить заказ</a>
