--- a/index.html
+++ b/index.html
@@ -3,31 +3,36 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <div>
-      <a href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="109" height="19"></a>
+  <header class="main-header">
+    <div class="header-top">
+      <a class="site-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="109" height="19"></a>
       <form action="https://echo.htmlacademy.ru" method="post">
         <label class="visually-hidden" for="search">Поиск</label>
-        <input type="search" id="search" name="search" placeholder="Поиск:">
+        <input class="header-search" type="search" id="search" name="search" placeholder="Поиск:">
         <button type="submit"><span class="visually-hidden">Искать</span></button>
       </form>
-      <a href="#">Закладки: 0</a>
-      <a href="#">Корзина: 0</a>
-      <a href="#">Оформить заказ</a>
+      <div class="shop-menu">
+        <a href="#">Закладки: 0</a>
+        <a href="#">Корзина: 0</a>
+        <a class="button button-checkout" href="#">Оформить заказ</a>
+      </div>
     </div>
-    <div>
-      <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <p><a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a></p>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      <ul>
-        <li><a href="#">Войти</a></li>
-        <li><a href="#">Регистрация</a></li>
+    <div class="header-bottom">
+      <p class="shop-info">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+      <p><a class="header-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a></p>
+      <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <ul class="user-menu">
+        <li><a class="button button-profile profile-logout" href="#">Войти</a></li>
+        <li><a class="button button-profile profile-logout" href="#">Регистрация</a></li>
       </ul>
     </div>
-    <nav>
-      <ul>
+    <nav class="site-nav">
+      <ul class="main-nav">
         <li><a href="#">Главная</a></li>
         <li><a href="#">Компания</a></li>
         <li><a href="catalog.html">Каталог</a></li>
@@ -70,12 +75,12 @@
           <div>
             <h3>Дрели</h3>
             <p>Соседям на радость</p>
-            <a href="catalog.html">Открыть каталог</a>
+            <a class="button button-details" href="catalog.html">Открыть каталог</a>
           </div>
           <div>
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
-            <a href="catalog.html">Открыть каталог</a>
+            <a class="button button-details" href="catalog.html">Открыть каталог</a>
           </div>
         </div>
         <div>
@@ -91,8 +96,8 @@
     <!-- Т О В А Р Ы -->
     <section>
       <div>
-        <h2>Популярные товары:</h2>
-        <a href="#">Все популярные товары</a>
+        <h2 class="title">Популярные товары:</h2>
+        <a class="button button-details" href="#">Все популярные товары</a>
       </div>
       <div>
         <article>
@@ -140,8 +145,8 @@
     <!-- П Р О И З В О Д И Т Е Л И -->
     <section>
       <div>
-        <h2>Популярные производители:</h2>
-        <a href="#">Все производители</a>
+        <h2 class="title">Популярные производители:</h2>
+        <a class="button button-details" href="#">Все производители</a>
       </div>
       <div>
         <ul>
@@ -158,7 +163,7 @@
     </section>
     <!-- С Е Р В И С Ы -->
     <section>
-      <h2>Сервисы</h2>
+      <h2 class="title sub-title">Сервисы</h2>
       <p>Хороший интернет-магазин отличается от плохого не только ценами!
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       <ul>
@@ -190,7 +195,7 @@
     </section>
     <!-- О  К О М П А Н И И -->
     <section>
-      <h2>КОМПАНИЯ «Техномарт»</h2>
+      <h2 class="title sub-title">КОМПАНИЯ «Техномарт»</h2>
       <p>
         Настоящий мужской шоппинг начинается здесь!
         Огромный выбор товаров для ремонта и строительства
@@ -200,60 +205,62 @@
         Мы можем доставить ваш товар в самые отдаленные точки России!
         Техномарт работает со многими транспортными компаниями:
       </p>
-      <ul>
+      <ul class="delivery-companies">
         <li>Деловые линии</li>
         <li>Автотрейдинг</li>
         <li>ЖелДорЭкспедиция</li>
       </ul>
-      <a href="#">Подробнее о компании</a>
+      <a class="button button-details" href="#">Подробнее о компании</a>
     </section>
     <section>
-      <h2>Контакты</h2>
+      <h2 class="title sub-title">Контакты</h2>
       <a href="#"><img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="300" height="158"></a>
-      <a href="#">Заблудились? Напишите нам!</a>
+      <a class="button button-details" href="#">Заблудились? Напишите нам!</a>
     </section>
   </main>
-  <footer>
-    <a href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
-    <p>
-      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-    </p>
-    <p>
-      <a href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
-    </p>
-    <ul>
-      <li><a href="#">Компания</a></li>
-      <li><a href="#">Новости</a></li>
-      <li><a href="#">Каталог</a></li>
-      <li><a href="#">Доставка</a></li>
-      <li><a href="#">Контакты</a></li>
-    </ul>
-    <ul>
-      <li><a href="#">Материалы</a></li>
-      <li><a href="#">Техника</a></li>
-      <li><a href="#">Инструмент</a></li>
-      <li><a href="#">Спецпредложения</a></li>
-    </ul>
-    <p>
-      © 2010–2019 Компания «Техномарт»
-      Все права защищены
-    </p>
-    <ul>
-      <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-      <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-      <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
-    </ul>
-    <p>
-      Обратная связь:
-      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-    </p>
-    <p>
-      Разработано —
-      <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-    </p>
+  <footer class="main-footer">
+    <div class="footer-top">
+      <a class="site-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
+      <p class="footer-address">
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        <a class="footer-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
+      </p>
+      <ul class="footer-nav">
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul class="footer-promo">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <p>
+        © 2010–2019 Компания «Техномарт»
+        Все права защищены
+      </p>
+      <ul class="social-button">
+        <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+        <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+      </ul>
+      <p>
+        Обратная связь:
+        <a class="academy" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p>
+        Разработано —
+        <a class="academy" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      </p>
+    </div>
   </footer>
 
-  <section>
+  <section class="hide">
     <h2 class="visually-hidden">Форма обратной связи</h2>
     <form action="https://echo.htmlacademy.ru" method="post">
       <div>
@@ -272,7 +279,7 @@
       <span class="visually-hidden">Закрыть</span>
     </button>
   </section>
-  <section>
+  <section class="hide">
     <h2 class="visually-hidden">Карта проезда</h2>
     <img src="img/map-popup.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="940" height="446">
     <button type="button">
