--- a/index.html
+++ b/index.html
@@ -48,36 +48,36 @@
     <!-- П Р О М О Б Л О К -->
     <section>
       <h2 class="visually-hidden">Товары и услуги</h2>
-      <div>
+      <div class="promo-block promo-materials">
         <div class="new-flag">New</div>
         <h3>Материалы</h3>
-        <a href="#">На любой вкус</a>
+        <a class="button button-promo" href="#">На любой вкус</a>
       </div>
-      <div>
+      <div class="promo-block promo-tool">
         <h3>Инструмент</h3>
-        <a href="#">На все случаи</a>
+        <a class="button button-promo" href="#">На все случаи</a>
       </div>
-      <div>
+      <div class="promo-block promo-tech">
         <h3>Техника</h3>
-        <a href="#">Для стройки</a>
+        <a class="button button-promo" href="#">Для стройки</a>
       </div>
-      <div>
+      <div class="promo-block promo-sale">
         <h3>Скидки 50%</h3>
-        <a href="#">На 350 товаров</a>
+        <a class="button button-promo" href="#">На 350 товаров</a>
       </div>
-      <div>
+      <div class="promo-block promo-delivery">
         <h3>Доставка</h3>
-        <a href="#">Бесплатно</a>
+        <a class="button button-promo" href="#">Бесплатно</a>
       </div>
       <!-- С Л А Й Д Е Р -->
       <div>
         <div>
-          <div>
+          <div class="slider">
             <h3>Дрели</h3>
-            <p>Соседям на радость</p>
+            <p>Соседям на радость!</p>
             <a class="button button-details" href="catalog.html">Открыть каталог</a>
           </div>
-          <div>
+          <div class="slider">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <a class="button button-details" href="catalog.html">Открыть каталог</a>
@@ -95,81 +95,81 @@
     </section>
     <!-- Т О В А Р Ы -->
     <section>
-      <div>
+      <div class="section-header">
         <h2 class="title">Популярные товары:</h2>
         <a class="button button-details" href="#">Все популярные товары</a>
       </div>
       <div>
-        <article>
+        <article class="cat-item">
           <img src="img/b9000.jpg" alt="Перфоратор Bosch BFG 9000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 9000</h3>
-          <p>32500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="item-price">32500 Р.</p>
+          <p class="item-sale">25500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 3000</h3>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
+          <p class="item-price">22500 Р.</p>
+          <p class="item-sale">15500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 6000</h3>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
+          <p class="item-price">30500 Р.</p>
+          <p class="item-sale">25500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
         </article>
-        <article>
+        <article class="cat-item">
           <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
           <h3>Перфоратор Bosch BFG 2000</h3>
-          <p>12500 Р.</p>
+          <p class="item-sale">12500 Р.</p>
           <div>
-            <a href="#">Купить</a>
-            <a href="#">В закладки</a>
+            <a class="button item-buy" href="#">Купить</a>
+            <a class="button item-bookmark" href="#">В закладки</a>
           </div>
           <div class="new-flag">New</div>
         </article>
       </div>
     </section>
     <!-- П Р О И З В О Д И Т Е Л И -->
-    <section class="brands">
-      <div>
+    <section>
+      <div class="section-header">
         <h2 class="title">Популярные производители:</h2>
         <a class="button button-details" href="#">Все производители</a>
       </div>
       <div>
-        <ul>
-          <li><a href="#"><img src="img/brand-bosch.png" alt="Bosch" width="126" height="37"></a></li>
-          <li><a href="#"><img src="img/brand-makita.png" alt="Makita" width="123" height="40"></a></li>
-          <li><a href="#"><img src="img/brand-dewalt.png" alt="DeWALT" width="146" height="44"></a></li>
-          <li><a href="#"><img src="img/brand-interskol.png" alt="Интерскол" width="200" height="88"></a></li>
-          <li><a href="#"><img src="img/brand-hitachi.png" alt="Hitachi" width="169" height="31"></a></li>
-          <li><a href="#"><img src="img/brand-lg.png" alt="LG" width="121" height="73"></a></li>
-          <li><a href="#"><img src="img/brand-aeg.png" alt="AEG" width="151" height="96"></a></li>
-          <li><a href="#"><img src="img/brand-metabo.png" alt="Metabo" width="204" height="69"></a></li>
+        <ul class="brand-list">
+          <li><a class="brand-name" href="#"><img src="img/brand-bosch.png" alt="Bosch" width="126" height="37"></a></li>
+          <li><a class="brand-name" href="#"><img src="img/brand-makita.png" alt="Makita" width="123" height="40"></a></li>
+          <li><a class="brand-name" href="#"><img src="img/brand-dewalt.png" alt="DeWALT" width="146" height="44"></a></li>
+          <li><a class="brand-name" href="#"><img src="img/brand-interskol.png" alt="Интерскол" width="200" height="88"></a></li>
+          <li><a class="brand-name" href="#"><img src="img/brand-hitachi.png" alt="Hitachi" width="169" height="31"></a></li>
+          <li><a class="brand-name" href="#"><img src="img/brand-lg.png" alt="LG" width="121" height="73"></a></li>
+          <li><a class="brand-name" href="#"><img src="img/brand-aeg.png" alt="AEG" width="151" height="96"></a></li>
+          <li><a class="brand-name" href="#"><img src="img/brand-metabo.png" alt="Metabo" width="204" height="69"></a></li>
         </ul>
       </div>
     </section>
     <!-- С Е Р В И С Ы -->
-    <section>
+    <section class="service-section">
       <h2 class="title sub-title">Сервисы</h2>
       <p>Хороший интернет-магазин отличается от плохого не только ценами!
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-      <ul>
-        <li>Доставка</li>
-        <li>Гарантия</li>
-        <li>Кредит</li>
+      <ul class="service-list">
+        <li class="service-item item-checked">Доставка</li>
+        <li class="service-item">Гарантия</li>
+        <li class="service-item">Кредит</li>
       </ul>
       <div>
         <h3>Доставка</h3>
