13. Личный проект: завершаем базовую стилизацию

--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
       <p>Хороший интернет-магазин отличается от плохого не только ценами!
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       <ul class="service-list">
-        <li class="service-item item-checked">Доставка</li>
-        <li class="service-item">Гарантия</li>
-        <li class="service-item">Кредит</li>
+        <li><a class="service-item item-checked" href="#">Доставка</a></li>
+        <li><a class="service-item" href="#">Гарантия</a></li>
+        <li><a class="service-item" href="#">Кредит</a></li>
       </ul>
       <div>
         <h3>Доставка</h3>
@@ -190,7 +190,7 @@
         <h3>Кредит</h3>
         <p>Залезть в долговую яму стало проще!
           Кредитные консультанты придут вам на помощь.</p>
-        <a href="#">Отправить заявку</a>
+        <a class="button button-details" href="#">Отправить заявку</a>
       </div>
     </section>
     <!-- О  К О М П А Н И И -->
