--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
       <h1 class="catalog-title">Перфораторы</h1>
       <!-- Ф И Л Ь Т Р -->
       <section class="sidebar">
-        <h2 class="filter-title">Фильтр</h2>
+        <h2 class="filter-title">Фильтр:</h2>
         <form class="filter" action="echo.htmlacademy.ru" method="get">
           <fieldset>
             <legend>Цена:</legend>
@@ -115,14 +115,14 @@
       <section>
         <div>
         <h2 class="visually-hidden">Каталог перфораторов</h2>
-        <div>
+        <div class="sorting-block">
           <span>Сортировка:</span>
-          <ul>
-            <li><a href="#">По цене</a></li>
+          <ul class="sorting-list">
+            <li><a class="sort-active" href="#">По цене</a></li>
             <li><a href="#">По типу</a></li>
             <li><a href="#">По функционалу</a></li>
           </ul>
-          <ul>
+          <ul class="sorting-buttons">
             <li><a href="#"><span class="visually-hidden">По возрастанию</span></a></li>
             <li><a href="#"><span class="visually-hidden">По убыванию</span></a></li>
           </ul>
@@ -221,8 +221,8 @@
       </div>
       </section>
       <div>
-        <ul>
-          <li><a href="#">1</a></li>
+        <ul class="pagination">
+          <li><a class="active-page" href="#">1</a></li>
           <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
           <li><a href="#">Следующая</a></li>
