--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           </div>
           <div class="slider">
             <div>
-              <div class="first-slide">
+              <div class="slide first-slide slide-active">
                 <h3>Дрели</h3>
                 <p>Соседям на радость!</p>
                 <a class="button button-details" href="catalog.html">Открыть каталог</a>
               </div>
-              <div class="second-slide">
+              <div class="slide second-slide">
                 <h3>Перфораторы</h3>
                 <p>Настоящие мужские игрушки</p>
                 <a class="button button-details" href="catalog.html">Открыть каталог</a>
@@ -190,14 +190,14 @@
             <li><a class="service-item" href="#">Гарантия</a></li>
             <li><a class="service-item" href="#">Кредит</a></li>
           </ul>
-          <div class="service-delivery">
+          <div class="service-slide service-delivery service-slide-active">
             <h3>Доставка</h3>
             <p>Мы с удовольствием доставим ваш товар прямо
               к вашему подъезду совершенно бесплатно!
               Ведь мы неплохо заработаем,<br>
               поднимая его на ваш этаж!</p>
           </div>
-          <div class="service-guarantee">
+          <div class="service-slide service-guarantee">
             <h3>Гарантия</h3>
             <p>Если купленный у нас товар поломается или заискрит,
               а также в случае пожара, спровоцированного его возгоранием,
@@ -205,7 +205,7 @@
               Мы обменяем сгоревший товар на новый.
               Дом уж восстановите как-нибудь сами.</p>
           </div>
-          <div class="service-credit">
+          <div class="service-slide service-credit">
             <h3>Кредит</h3>
             <p>Залезть в долговую яму стало проще!
               Кредитные консультанты придут вам на помощь.</p>
